--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 *.synctex(busy)
 psalmi/unused/*
 .DS_Store
+gitignore.txt
+Title page LaTeX basic format.txt
+Jesu Redemptor Omnium.txt
+I Vesperis in Natitivate Domini.txt
+II Vesperis in Natitivate Domini.txt
+Règles accentuation & division latine/Règles accentuation & division latine/Hyphenation rules for medieval and modern Latin.txt
+Règles accentuation & division latine/Latin hyphenation rules Modern Solesmes.txt
+Règles accentuation & division latine/Liturgical accentuation rules.txt
