--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ II Vesperis in Natitivate Domini.txt
 Règles accentuation & division latine/Règles accentuation & division latine/Hyphenation rules for medieval and modern Latin.txt
 Règles accentuation & division latine/Latin hyphenation rules Modern Solesmes.txt
 Règles accentuation & division latine/Liturgical accentuation rules.txt
+Proprium Missae/.DS_Store
